fix logo nav sizing by wrapping flexbox

--- a/style.css
+++ b/style.css
@@ -155,5 +155,16 @@ footer p {
     display: flex;
     justify-content: space-between;
   }
+  
+  .header-item{
+    flex:1;
+  }
+  .header-group{
+    display: flex;
+    flex-direction: row;
+    padding-bottom: 15px;
+    align-items: center;
+    flex-flow: row wrap;
+  }
 
 }
